update: enhance project details and improve code structure
- Added "Experience" component to the main page for better user navigation.
- Updated project skills icons in featured projects for consistency.
- Revised hero section text to reflect a more professional title and updated description.
- Changed project name from 'Data Modeling' to 'BookNest' for clarity.
- Updated package.json to include pnpm configuration for better dependency management.

--- a/package.json
+++ b/package.json
@@ -50,5 +50,15 @@
   "lint-staged": {
     "*.{js,jsx}": "eslint --fix",
     "*.{js,jsx,css,md}": "prettier --write"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "sharp",
+      "yarn"
+    ],
+    "onlyBuiltDependencies": [
+      "sharp",
+      "yarn"
+    ]
   }
 }
